# lugo4cpp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  base.Dockerfile  base2.Dockerfile  build_grpc.sh  docker-compose.yml
.github/workflows/: cmake-single-platform.yml
example/simple/: CMakeLists.txt  main.cpp  my_bot.hpp  run_12_players.sh
include/lugo/: client.hpp  configurator.hpp  geo.hpp  goal.hpp  index.hpp  mapper.hpp  orientation.hpp  proto_exported.hpp  specs.hpp  stub.hpp
src/: client.cpp  configurator.cpp  geo.cpp  goal.cpp  index.cpp  mapper.cpp  orientation.cpp  stub.cpp
